syntax = "proto3";

package protobuf;

option go_package = "/pkg/pb";


//SIGN UP
message SignUpRequest {
    string company_name = 1;
    string company_type = 2;
    string business_id = 3;
    repeated string phone_nums = 4;
    string email = 5;
    string password = 6;
}


enum sign_up_status{
    SIGNED_UP = 0;
    WRONG_DATA = 1;
    COMPANY_ALREADY_EXISTS = 2;
}

message SignUpResponse {
    sign_up_status status = 1;
    string info = 2;
}


//SIGN IN
message SignInRequest{
    string business_id = 1;
    string password = 2;
}

message SignInResponse {
    string access_token = 1;
}




//COMPANY DATA
message CompanyInfoRequest {
    string business_id = 1;
}

message CompanyInfoResponse {
    string company_name = 1;
    string company_type = 2;
    string business_id = 3;
    repeated string phone_nums = 4;
    string email = 5;
}


service SellersUsersService{
    rpc SignUp (SignUpRequest) returns (SignUpResponse) {};

    rpc SignIn (SignInRequest) returns (SignInResponse) {};

    rpc CompanyInfo (CompanyInfoRequest) returns (CompanyInfoResponse) {};
}